[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Font.tres" type="Theme" id=1]
[ext_resource path="res://assets/ui/move_horizontal.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/joy_con_left.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/joy_con_left_selected.png" type="Texture" id=4]
[ext_resource path="res://ui/Explanation.gd" type="Script" id=5]
[ext_resource path="res://assets/timer_CCW_75.png" type="Texture" id=6]
[ext_resource path="res://assets/timer_CCW_50.png" type="Texture" id=7]
[ext_resource path="res://assets/timer_CCW_25.png" type="Texture" id=8]
[ext_resource path="res://assets/timer_100.png" type="Texture" id=9]
[ext_resource path="res://assets/timer_0.png" type="Texture" id=10]
[ext_resource path="res://assets/timer_CW_50.png" type="Texture" id=11]
[ext_resource path="res://assets/timer_CW_75.png" type="Texture" id=12]
[ext_resource path="res://assets/timer_CW_25.png" type="Texture" id=13]
[ext_resource path="res://ui/ResetPopUp.gd" type="Script" id=14]
[ext_resource path="res://assets/ui/joy_con_right_selected.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/joy_con_right.png" type="Texture" id=16]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float blur_amount = 2;

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/blur_amount = 2.0

[sub_resource type="Animation" id=9]
resource_name = "Loading"
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Loading:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.001, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ) ]
}

[node name="Explanation" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 6 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
method_call_mode = 1
anims/Loading = SubResource( 9 )

[node name="Loading" type="Sprite" parent="AnimationPlayer"]
visible = false
position = Vector2( 24, 24 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 10 )

[node name="Background" type="ColorRect" parent="."]
margin_top = 131.0
margin_right = 1024.0
margin_bottom = 476.0
rect_min_size = Vector2( 1024, 0 )
color = Color( 0, 0, 0, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalanceGame" type="Control" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explanation" type="Label" parent="Background/BalanceGame"]
margin_left = 14.0
margin_top = 12.0
margin_right = 1013.0
margin_bottom = 103.0
theme = ExtResource( 1 )
text = "You are balancing on a see-saw with your team. Move in sync with your team to avoid hitting the obstacles that will appear beneath it."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsyncExplanation" type="Label" parent="Background/BalanceGame"]
margin_left = 19.0
margin_top = 87.0
margin_right = 1018.0
margin_bottom = 128.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.501961, 0, 0, 1 )
text = "Be careful and communicate: Not everyone can see all obstacles!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hold" type="Label" parent="Background/BalanceGame"]
margin_left = 130.0
margin_top = 141.0
margin_right = 455.0
margin_bottom = 172.0
theme = ExtResource( 1 )
text = "Hold the controller like this"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldLeft" type="Sprite" parent="Background/BalanceGame"]
position = Vector2( 65, 160 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="HoldRight" type="Sprite" parent="Background/BalanceGame"]
visible = false
position = Vector2( 65, 160 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 16 )

[node name="TiltLeft" type="Sprite" parent="Background/BalanceGame"]
position = Vector2( 65, 250 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="TiltRight" type="Sprite" parent="Background/BalanceGame"]
visible = false
position = Vector2( 65, 250 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 16 )

[node name="Tilt" type="Label" parent="Background/BalanceGame"]
margin_left = 130.0
margin_top = 231.0
margin_right = 757.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 134, 154 )
theme = ExtResource( 1 )
text = "Tilt the controller to move your character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveHorizontal" type="Sprite" parent="Background/BalanceGame"]
modulate = Color( 0.498039, 0, 0, 1 )
position = Vector2( 65, 212 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="StartLeft" type="Sprite" parent="Background/BalanceGame"]
position = Vector2( 65, 308 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="StartRight" type="Sprite" parent="Background/BalanceGame"]
visible = false
position = Vector2( 65, 308 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 15 )

[node name="Start" type="Label" parent="Background/BalanceGame"]
margin_left = 130.0
margin_top = 292.0
margin_right = 757.0
margin_bottom = 323.0
rect_pivot_offset = Vector2( 134, 154 )
theme = ExtResource( 1 )
text = "Press any button to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting" type="Control" parent="Background"]
visible = false
margin_left = 701.0
margin_top = 303.0
margin_right = 855.0
margin_bottom = 343.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting" type="Label" parent="Background/Waiting"]
margin_right = 355.0
margin_bottom = 36.0
text = "Waiting for other players"

[node name="Popup" type="Popup" parent="."]
margin_left = 781.0
margin_top = 543.0
margin_right = 1011.0
margin_bottom = 590.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_left = -21.0
margin_right = 230.0
margin_bottom = 48.0
color = Color( 0.556863, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
margin_left = -12.0
margin_top = 6.0
margin_right = 209.0
margin_bottom = 42.0
theme = ExtResource( 1 )
text = "Resetting Game!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="about_to_show" from="Popup" to="Popup" method="_on_Popup_about_to_show"]
